hphp/hack/test/typecheck/inout/bad_inout_use_lvalue10.php
<?hh

function foobar(inout dynamic $x): void {
  foobar(inout $x[0][]);
}
